Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-17840

QS60Style slows down orientation switch by updating the widgets unnecessarily

    XMLWordPrintable

Details

    • ad5ef5c565b0399c65827d67be8ff00fa8db1a68

    Description

      QS60Style checks that after orientation switch that pixel metrics are updated to match the new layout.
      After doing this, it goes through all the widgets and calls update() and updateGeometry() for each of them AND
      then ensures that the widgets are polished.

      The first part is not necessary, it will only slow down the orientation switch,

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            samimeri Sami Merila (Inactive)
            samimeri Sami Merila (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes