QS60Style slows down layout switch by updating widgets unnecessarily

Remove refreshUi() method frmo QS60Style. It might have been necessary
two years ago, when we didn't have proper polishing of QWidgets
(when style changed), but it is no longer needed.
It just slows down orientation switch.

Task-number: QTBUG-17840
Reviewed-by: Tomi Vihria